versions/v4.0.0/build/dts/api/bindings/espi/microchip,xec-espi-host-dev.md
---
version: v4.0.0
source_url: https://docs.zephyrproject.org/4.0.0/build/dts/api/bindings/espi/microchip,xec-espi-host-dev.html
original_path: build/dts/api/bindings/espi/microchip,xec-espi-host-dev.html
---

# microchip,xec-espi-host-dev (on espi bus)

Vendor: [Microchip Technology Inc.](../../bindings.md#dt-vendor-microchip)

Note

An implementation of a driver matching this compatible is available in
[drivers/espi/espi\_mchp\_xec\_host\_v2.c](https://github.com/zephyrproject-rtos/zephyr/blob/main/drivers/espi/espi_mchp_xec_host_v2.c).

## Description

```text
Microchip XEC eSPI Host devices
```

## Properties

Node specific propertiesDeprecated node specific propertiesBase properties

Properties not inherited from the base binding file.

| Name | Type | Details |
| --- | --- | --- |
| `ldn` | `int` | ```text logical device number ```  This property is **required**. |
| `girqs` | `array` | ```text array of GIRQ and bit positions ``` |
| `pcrs` | `array` | ```text PCR sleep register index and bit position ``` |
| `host-io` | `int` | ```text Logical device Host I/O (x86) base. Refer to SoC documentation for the number of I/O decoders implemented by a device (1 or 2) and the fixed I/O masks. ``` |
| `host-io-addr-mask` | `int` | ```text Host I/O address mask. This value is fixed for all HW and is only used by Port80 BIOS debug alias device to specify the byte lane the alias address is mapped to in the 80h to 83h I/O range. ``` |
| `host-mem` | `int` | ```text Logical device Host memory (x86) base address. Refer to SoC documentation for which logical devices implement a memory decoder and the fixed memory address masking. ``` |
| `emi-mems` | `array` | ```text Each EMI host device supports Host access to two SoC data memory regions. Each region requires three configuration parameters: Base address in the SoC data memory, read limit, and write limit. If bits[14:2] of the address written by the Host to the EC address register is less than the limit value the access is allowed. Bit[15] of the EC address selects which of the two memory regions is accessed. ``` |
| `emi-mem-cells` | `int` | Constant value: `3` |

Deprecated properties not inherited from the base binding file.

(None)

Properties inherited from the base binding file, which defines
common properties that may be set on many nodes. Not all of these
may apply to the “microchip,xec-espi-host-dev” compatible.

| Name | Type | Details |
| --- | --- | --- |
| `reg` | `array` | ```text register space ```  This property is **required**.  See [Important properties](../../../intro-syntax-structure.md#dt-important-props) for more information. |
| `status` | `string` | ```text indicates the operational status of a device ```  Legal values: `'ok'`, `'okay'`, `'disabled'`, `'reserved'`, `'fail'`, `'fail-sss'`  See [Important properties](../../../intro-syntax-structure.md#dt-important-props) for more information. |
| `compatible` | `string-array` | ```text compatible strings ```  This property is **required**.  See [Important properties](../../../intro-syntax-structure.md#dt-important-props) for more information. |
| `reg-names` | `string-array` | ```text name of each register space ``` |
| `interrupts` | `array` | ```text interrupts for device ```  See [Important properties](../../../intro-syntax-structure.md#dt-important-props) for more information. |
| `interrupts-extended` | `compound` | ```text extended interrupt specifier for device ``` |
| `interrupt-names` | `string-array` | ```text name of each interrupt ``` |
| `interrupt-parent` | `phandle` | ```text phandle to interrupt controller node ``` |
| `label` | `string` | ```text Human readable string describing the device (used as device_get_binding() argument) ```  See [Important properties](../../../intro-syntax-structure.md#dt-important-props) for more information.  This property is **deprecated**. |
| `clocks` | `phandle-array` | ```text Clock gate information ``` |
| `clock-names` | `string-array` | ```text name of each clock ``` |
| `#address-cells` | `int` | ```text number of address cells in reg property ``` |
| `#size-cells` | `int` | ```text number of size cells in reg property ``` |
| `dmas` | `phandle-array` | ```text DMA channels specifiers ``` |
| `dma-names` | `string-array` | ```text Provided names of DMA channel specifiers ``` |
| `io-channels` | `phandle-array` | ```text IO channels specifiers ``` |
| `io-channel-names` | `string-array` | ```text Provided names of IO channel specifiers ``` |
| `mboxes` | `phandle-array` | ```text mailbox / IPM channels specifiers ``` |
| `mbox-names` | `string-array` | ```text Provided names of mailbox / IPM channel specifiers ``` |
| `power-domains` | `phandle-array` | ```text Power domain specifiers ``` |
| `power-domain-names` | `string-array` | ```text Provided names of power domain specifiers ``` |
| `#power-domain-cells` | `int` | ```text Number of cells in power-domains property ``` |
| `zephyr,deferred-init` | `boolean` | ```text Do not initialize device automatically on boot. Device should be manually initialized using device_init(). ``` |
| `wakeup-source` | `boolean` | ```text Property to identify that a device can be used as wake up source.  When this property is provided a specific flag is set into the device that tells the system that the device is capable of wake up the system.  Wake up capable devices are disabled (interruptions will not wake up the system) by default but they can be enabled at runtime if necessary. ``` |
| `zephyr,pm-device-runtime-auto` | `boolean` | ```text Automatically configure the device for runtime power management after the init function runs. ``` |
| `zephyr,disabling-power-states` | `phandles` | ```text List of power states that will disable this device power. ``` |

## Specifier cell names

- emi-mem cells: base, rdlimit, wrlimit
